--- a/sign-up.html
+++ b/sign-up.html
@@ -49,7 +49,7 @@
           <div class="aa-signin-area">
             <div class="aa-signin-form">
               <div class="aa-signin-form-title">
-                <a class="aa-property-home" href="home.html">Cyber Place</a>
+                <a class="aa-property-home" href="index.html">Cyber Place</a>
                 <h4>Cùng tham gia cộng đồng của chúng mình nào!</h4>
               </div>
               <form class="contactform">                                                 
