--- a/apartment-for-rent.html
+++ b/apartment-for-rent.html
@@ -95,13 +95,13 @@
           </button>
           <!-- LOGO -->                                               
           <!-- Text based logo -->
-           <a class="navbar-brand aa-logo" href="home.html"> Cyber <span>Place</span></a>
+           <a class="navbar-brand aa-logo" href="index.html"> Cyber <span>Place</span></a>
            <!-- Image based logo -->
-           <!-- <a class="navbar-brand aa-logo-img" href="home.html"><img src="img/logo.png" alt="logo"></a> -->
+           <!-- <a class="navbar-brand aa-logo-img" href="index.html"><img src="img/logo.png" alt="logo"></a> -->
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
-            <li class="active"><a href="home.html">Trang Chủ</a></li>
+            <li class="active"><a href="index.html">Trang Chủ</a></li>
              <li class="dropdown">
 <!--              <a href="bds-cho-thue.html" class="dropdown-toggle" data-toggle="dropdown">Bất động sản cho thuê <span class="caret"></span></a>-->
 			  <a href="bds-cho-thue.html" class="dropdown-toggle">Bất động sản cho thuê <span class="caret"></span></a>
@@ -469,7 +469,7 @@
           <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="aa-footer-left">
-                <p>Cyber <a rel="nofollow" href="home.html">Team</a></p>
+                <p>Cyber <a rel="nofollow" href="index.html">Team</a></p>
               </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
