--- a/log-in.html
+++ b/log-in.html
@@ -43,6 +43,13 @@
   </head>
   <body>
   <section id="aa-signin">
+	  <section id="aa-slider">
+    <div class="aa-slider-area"> 
+          <div class="aa-top-slider slick-initialized slick-slider">
+	<button type="button" data-role="none" class="slick-prev slick-arrow" aria-label="Previous" role="button" style="display: block;">Previous</button>
+          </div>
+    </div>
+</section>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
