--- a/log-in.html
+++ b/log-in.html
@@ -46,7 +46,7 @@
 	  <section id="aa-slider">
     <div class="aa-slider-area"> 
           <div class="aa-top-slider slick-initialized slick-slider">
-	<button onclick="window.location.href='/index.html'" type="button" data-role="none" class="slick-prev slick-arrow" aria-label="Previous" role="button" style="display: block;">Previous</button>
+			  <a href="index.html"><button type="button" data-role="none" class="slick-prev slick-arrow" aria-label="Previous" role="button" style="display: block;">Previous</button></a>
           </div>
     </div>
 </section>
