update button back home
Co-Authored-By: Trang <trang@users.noreply.github.com>

--- a/sign-up.html
+++ b/sign-up.html
@@ -43,6 +43,13 @@
   </head>
   <body>   
   <section id="aa-signin">
+	  	 <section id="aa-slider">
+		<div class="aa-slider-area"> 
+			  <div style="margin-top: 20px;" class="aa-top-slider slick-initialized slick-slider">
+				  <a href="index.html"><button type="button" data-role="none" class="slick-prev slick-arrow" aria-label="Previous" role="button" style="display: block;">Previous</button></a>
+			  </div>
+		</div>
+	</section>
     <div class="container">
       <div class="row">
         <div class="col-md-12">
