--- a/for-rent.html
+++ b/for-rent.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <title>Bất Động Sản Cho Thuê</title>
+    <title>Bất động sản cho thuê | Cyber Place</title>
     
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -120,7 +120,7 @@
               </ul>
             </li>
             <li><a href="contact.html">CONTACT</a></li>
-           <li><a href="404.html">404 PAGE</a></li>
+           <li><a href="post-news.html"><button style="line-height: 30px; margin-top: -10px; width: 150px; margin-right: -15px;" type="button" class="btn btn-info ">Đăng tin</button></a></li>
           </ul>                            
         </div><!--/.nav-collapse -->       
       </div>          
