--- a/details-asset.html
+++ b/details-asset.html
@@ -104,7 +104,7 @@
           <ul id="top-menu" class="nav navbar-nav navbar-right aa-main-nav">
             <li class="active"><a href="index.html">Trang Chủ</a></li>
              <li class="dropdown">
-              <a class="dropdown-toggle" href="bds-cho-thue.html">Bất động sản cho thuê <span class="caret"></span></a>
+              <a class="dropdown-toggle" href="for-rent.html">Bất động sản cho thuê <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">                
                 <li><a href="apartment-for-rent.html">Chung cư cho thuê</a></li>                
                 <li><a href="apartment-for-rent.html">Nhà riêng cho thuê</a></li>                
