--- a/post-news.html
+++ b/post-news.html
@@ -104,7 +104,7 @@
             <li class="active"><a href="index.html">Trang Chủ</a></li>
              <li class="dropdown">
 <!--              <a href="bds-cho-thue.html" class="dropdown-toggle" data-toggle="dropdown">Bất động sản cho thuê <span class="caret"></span></a>-->
-			  <a href="bds-cho-thue.html" class="dropdown-toggle">Bất động sản cho thuê <span class="caret"></span></a>
+			  <a href="for-rent.html" class="dropdown-toggle">Bất động sản cho thuê <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">                
                 <li><a href="apartment-for-rent.html">Chung cư cho thuê</a></li>                
                 <li><a href="apartment-for-rent.html">Nhà riêng cho thuê</a></li>                
