--- a/details-asset.html
+++ b/details-asset.html
@@ -120,7 +120,7 @@
               </ul>
             </li>
             <li><a href="contact.html">CONTACT</a></li>
-           <li><a href="post-news.html"><button style="line-height: 30px; margin-top: -10px; width: 150px; margin-right: -15px;" type="button" class="btn btn-info ">Đăng tin</button></a></li>
+           <li><a href="post-news.html"><button style="line-height: 30px; margin-top: -10px; width: 150px; margin-right: -15px;" type="button" class="btn btn-info ">Kênh rao tin</button></a></li>
           </ul>                            
         </div><!--/.nav-collapse -->       
       </div>          
