--- a/post-news.html
+++ b/post-news.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <title>Chung cư cho thuê | Cyber Place</title>
+    <title>Kênh rao tin | Cyber Place</title>
     
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -135,7 +135,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="aa-property-header-inner">
-            <h2>Chung Cư Cho Thuê</h2>
+            <h2>ĐĂNG TIN CHO THUÊ NHÀ ĐẤT</h2>
             <ol class="breadcrumb">
             <li><a href="#">Trang Chủ</a></li>            
             <li class="active">Chung Cư Cho Thuê</li>
