--- a/sign-up.html
+++ b/sign-up.html
@@ -77,7 +77,24 @@
                   <input type="password" name="confirm-password"> 
                 </div>
                 <div class="aa-single-submit">
-                  <input type="submit" value="Tạo Tài Khoản" name="submit">                    
+                  <input type="submit" value="Tạo Tài Khoản" name="submit">          
+
+				  <div class="col s12 m6 offset-m3 center-align">
+					<a class="oauth-container btn darken-4 white black-text" href="/users/google-oauth/" style="text-transform:none">
+						<div class="left">
+							<img width="20px" style="margin-top:7px; margin-right:8px" alt="Google sign-in" 
+								src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
+						</div>
+						Đăng nhập bằng Google
+					</a>
+				</div>
+
+				
+<!-- Compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
                 </div>
               </form>
             </div>
